force-app/main/default/objects/Live_Person_Chat_Transcript__c.object
<CustomObject>
    <description>Object to store the Live Person Chat Transcripts</description>
    <fields>
        <fullName>Agent_Last_Message_Time__c</fullName>
        <description>Time of agent&apos;s last message</description>
        <label>Agent Last Message Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Message_Count__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to get the number of Agent Message Counts</description>
        <label>Agent Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store the Agent Name</description>
        <label>Agent Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Person_Chat_Transcript</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to store the Body of the chat</description>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Chat_365_Log__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Link to Chat 365 Log object</description>
        <label>Chat 365 Log</label>
        <referenceTo>Chat_365_Log__c</referenceTo>
        <relationshipLabel>Live Person Chat Transcript</relationshipLabel>
        <relationshipName>Live_Person_Chat_Transcript</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_Link__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Used by Monash Connect Console for Live Person Chat Case Feed</description>
        <formula>IF(CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &quot;staging&quot;), &quot;https://unicrm--staging.sandbox.lightning.force.com/&quot;,
IF(CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &quot;sit&quot;), &quot;https://unicrm--sit.sandbox.lightning.force.com/&quot;,
IF(CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &quot;qa&quot;), &quot;https://unicrm--mcqa.sandbox.lightning.force.com/&quot;, &quot;https://unicrm.lightning.force.com/&quot;) ))
+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversation_Assigned_Time__c</fullName>
        <description>Time conversation was assigned</description>
        <label>Conversation Assigned Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conversation_ID__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture the unique conversation ID</description>
        <label>Conversation ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture the End time of the chat conversation</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ended_By__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture who has ended the chat</description>
        <label>Ended By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Auto-close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the linked Enquiry details</description>
        <label>Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Live Person Chat Transcript</relationshipLabel>
        <relationshipName>Live_Person_Chat_Transcript</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture Platform details</description>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <description>Field to capture the skill details</description>
        <label>Skill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture the Date time of chat initiation</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visitor_Message_Count__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture the Visitor Message Count</description>
        <label>Visitor Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Time__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture chat wait time</description>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Live Person Chat Transcript</label>
    <nameField>
        <label>Live Person Chat Transcript Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Person Chat Transcript</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>